--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.4",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-navigation-menu": "^1.2.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
@@ -19,6 +23,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.473.0",
     "next": "15.1.5",
@@ -28,6 +34,8 @@
     "react-icons": "^5.4.0",
     "sanity": "^3.70.0",
     "styled-components": "^6.1.14",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.15.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -39,8 +47,10 @@
     "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
+    "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
