--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.10.4",
+    "@clerk/nextjs": "^6.11.0",
+    "@clerk/shared": "^2.20.18",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slider": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@reduxjs/toolkit": "^2.5.1",
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
@@ -27,11 +31,12 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.473.0",
-    "next": "15.1.5",
+    "next": "^15.1.5",
     "next-sanity": "^9.8.38",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "sanity": "^3.70.0",
     "styled-components": "^6.1.14",
     "sweetalert": "^2.1.2",
