--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "sanity": "^3.70.0",
+    "shipengine": "^1.0.7",
     "styled-components": "^6.1.14",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.15.10",
