--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "import-data": "node scripts/importSanityData.mjs"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.11",
     "@clerk/nextjs": "^6.11.0",
     "@clerk/shared": "^2.20.18",
     "@headlessui/react": "^2.2.0",
