--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "@tabler/icons-react": "^3.28.1",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
